# ji-coursesel-cli

./: .coursesel  .gitignore  Elector.py  Readme.md  SingleWorker.py  a.html  checkclass.py  coursesel.py  demo.cast  emailtest.py  getlist copy.py  getlist.py  main.py  qiangke copy 2.py  qiangke.py  requirements.txt  rqs.py  runsingle.py  setup.cfg  setup.py  test.py
FA2022/: catch.py  runsingle.py  status.py
Food Robber/: Readme.md  check.py  listen.py
SU2022/: ljr.py  rqs2.py  runsingle.py  testspeed.py  tly.py  xym.py
courseselcli/: command_line.py  coursesel.py  elector.py  login.py  main.py  single.py
lifa/: check.py
sample data/: all_turns.json  courses_2.json  courses_data.json
test_scripts/: checkclass.py  emailtest.py  fudanqiangke.py  getlist copy.py  getlist.py  qiangke copy 2.py  qiangke copy.py  qiangke.py  rqs.py  runsingle.py  wangzu.py
