[metadata]
name = ji-coursesel
version = 0.0.5
description = CLI Interface for JI Coursesel
long_description = file: Readme.md
long_description_content_type = text/markdown
author = linsyking
author_email = linsy_king@sjtu.edu.cn
keywords = cli, course
license = MIT License

[options]
python_requires = >=3.7
packages = courseselcli
install_requires = 
    prettytable
    jaccount_cli
    typer
    rich
